@@ -343,3 +343,5 @@ Version 20080728.450 (Saturday, March 5, 2011)
 Version ${Version} (${Date})
  - Added support for editing Google Docs text documents created in June 2010 or
    later (requires Firefox 4 or equivalent).
+ - Fixed an issue in rich text controls where selecting text and pressing
+   Backspace would delete one character too many.
